[Front-end] Search-bar redid the layout, but need to fix search button alignment

--- a/css/playground.css
+++ b/css/playground.css
@@ -223,9 +223,37 @@ i.side-icon {
   background-color: #232323;
   padding: 5px 5px 5px 5px;
   margin: 10px 10px 10px 10px;
+
 }
 
 .expand {
   width: 100%;
   height: 100%;
+}
+
+.search-bar-wrapper > .activity {
+  height: 100%;
+  width: 30%;
+display: inline-block;
+}
+
+.search-bar-wrapper > .from {
+  height: 100%;
+  width: 15%;
+  display: inline-block;
+}
+.search-bar-wrapper > .to {
+  height: 100%;
+  width: 15%;
+  display: inline-block;
+}
+.search-bar-wrapper > .skill {
+  height: 100%;
+  width: 15%;
+  display: inline-block;
+}
+.search-bar-wrapper > .join {
+  width: 23%;
+  display: inline-block;
+  vertical-align: middle;
 }
